@startuml hardware-architecture
top to bottom direction
skinparam linetype ortho
skinparam nodesep 15
skinparam ranksep 15
skinparam defaultFontSize 18
hide members

package "Entry & Config" as Layer1 {
    class "Main (esp32)" as Main
    class "Config" as Config
}

package "Sensors" as Layer4 {
    class SensorManager
    class SensorData
}

package "Graphics" as Layer8 {
    class GraphicsManager
}

package "Network (Core 0)" as Layer3 {
    class MqttManager
    class WifiManager
    class TimeManager
    class JsonBuilder
    class CommandParser
}

package "Shared Data & IPC" as Layer2 {
    class SharedStateData
    class CommandMsg
    enum CommandType
    class MutexLock
}

package "Game Engine and Entities (Core 1)" as Layer5 {
    class GameEngine
    class GameConfig
    interface IGame
    class BaseGame
    class Game1Labyrinth
    class Game2Flatland
    class CookieField
    class Cookie
    interface ICookieSpawner
    class RectCookieSpawner
    class MazeCookieSpawner
    class GameState
    enum RunningStatus
}

package "Physics Simulation" as Layer6 {
    class PhysicsEngine
    class PhysicsBody
    class PhysicsParams
    class Vec2
    interface ICollider
    class BorderCollider
    class MazeCollider
}

package "Maze Generation" as Layer7 {
    class MazeManager
}


' STRICT VERTICAL LAYOUT FLOW (Package-to-Package Chaining)
Config -[hidden]down-> SensorManager            
SensorData -[hidden]down-> GraphicsManager       
' GraphicsManager -[hidden]down-> MqttManager      
CommandParser -[hidden]down-> SharedStateData    
Config -[hidden]right-> GameState
MazeCookieSpawner -[hidden]down-> PhysicsEngine  
' CommandType -[hidden]left-> MazeManager                


' INTERNAL VERTICAL STACKING CONSTRAINTS

' Layer 1
Main -[hidden]down-> Config

' Layer 4
SensorManager -[hidden]down-> SensorData

' Layer 3
' MqttManager -[hidden]down-> WifiManager
' WifiManager -[hidden]down-> TimeManager
TimeManager -[hidden]down-> JsonBuilder
WifiManager -[hidden]down-> CommandParser

' Layer 2
SharedStateData -[hidden]down-> CommandMsg
CommandMsg -[hidden]down-> CommandType
CommandType -[hidden]down-> MutexLock

' Layer 5 (Two narrow parallel columns)
GameState -[hidden]down-> RunningStatus
RunningStatus -[hidden]down-> GameEngine
GameEngine -[hidden]down-> GameConfig
GameConfig -[hidden]down-> CookieField
' CookieField -[hidden]right-> Cookie
' CookieField-[hidden]down-> ICookieSpawner
ICookieSpawner -[hidden]down-> RectCookieSpawner
RectCookieSpawner -[hidden]down-> MazeCookieSpawner

Game1Labyrinth -[hidden]down-> Game2Flatland
Game2Flatland -[hidden]down-> BaseGame
BaseGame -[hidden]down-> IGame

GameEngine -[hidden]right-> BaseGame

' Layer 6 (Two narrow parallel columns)
PhysicsEngine -[hidden]down-> PhysicsBody
PhysicsBody -[hidden]down-> PhysicsParams
' PhysicsParams -[hidden]down-> Vec2

' MazeCollider -[hidden]down-> BorderCollider
BorderCollider -[hidden]down-> ICollider

PhysicsEngine -[hidden]right-> MazeCollider

' RELATIONSHIPS & DEPENDENCIES

' --- Orchestration & Top-Level Dependencies ---
Main --> SensorManager
Main --> GameEngine
Main --> GraphicsManager
Main --> MqttManager
Main ..> MutexLock
Main ..> Config

' --- Shared IPC ---
CommandMsg --> CommandType
CommandParser ..> CommandMsg

' --- Network Layer ---
MqttManager ..> WifiManager
MqttManager ..> TimeManager
MqttManager ..> CommandParser
JsonBuilder ..> SharedStateData

' --- Sensor Layer ---
SensorManager ..> SensorData

' --- Engine & Game Modes ---
GameEngine --> IGame
GameEngine --> GameConfig
BaseGame ..|> IGame
Game1Labyrinth --|> BaseGame
Game2Flatland --|> BaseGame
GameEngine --> CookieField
GameEngine --> PhysicsEngine

' --- Gameplay Entities ---
CookieField o--> Cookie
CookieField ..> ICookieSpawner
RectCookieSpawner ..|> ICookieSpawner
MazeCookieSpawner ..|> ICookieSpawner
GameState --> RunningStatus

' --- Physics Layer ---
PhysicsEngine o--> PhysicsParams
PhysicsEngine ..> PhysicsBody
PhysicsEngine ..> Vec2
PhysicsEngine ..> ICollider
BorderCollider ..|> ICollider
MazeCollider ..|> ICollider

' --- Maze & Graphics Layer ---
Game1Labyrinth --> MazeManager
MazeCookieSpawner ..> MazeManager

@enduml